Adjusts line height of subsection header to avoid cropped descenders

--- a/plugins/rapture/nexus-rapture-baseapp/src/main/baseapp/packages/rapture-theme/sass/src/Ext/form/Panel.scss
+++ b/plugins/rapture/nexus-rapture-baseapp/src/main/baseapp/packages/rapture-theme/sass/src/Ext/form/Panel.scss
@@ -14,7 +14,8 @@
   $ui-header-color: #333333,
   $ui-header-padding: 25px 0 0 0 !important,
   $ui-header-font-size: 16px,
-  $ui-header-background-color: #ffffff
+  $ui-header-background-color: #ffffff,
+  $ui-header-line-height: 20px
 );
 
 .feature-content {
